# MLFF-Distiller

./: .gitignore  AGENT5_STARTUP_CHECKLIST.md  ANALYTICAL_GRADIENTS_DAY2_SUMMARY.md  ANALYTICAL_GRADIENTS_DAYS3-7_ASSESSMENT.md  ANALYTICAL_GRADIENTS_IMPLEMENTATION_PLAN.md  CHANGELOG.md  COMPACT_MODELS_SUMMARY.md  CONTRIBUTING.md  COORDINATION_REPORT_20251124.md  COORDINATOR_COMMITMENT.md  CUDA_OPTIMIZATION_STATUS.txt  DELIVERABLES_MANIFEST_20251124.md  FINAL_COORDINATION_CLOSURE.md  GITHUB_ISSUES_WEEK1.md  INITIALIZATION_SUMMARY.md  ISSUE_14_COMPLETION_SUMMARY.md  ISSUE_33_COMPLETION_REPORT.md  ISSUE_41_CICD_REPORT.md  ISSUE_7_COMPLETION_SUMMARY.md  LICENSE  M6_CLOSURE_REPORT.md  M6_COORDINATION_SUMMARY.md  M6_EXECUTION_STARTED.md  M6_FINAL_HANDOFF.md  M6_FINAL_SIGN_OFF.md  M6_IMMEDIATE_ACTIONS_NEXT_2_HOURS.md  M6_QUICK_REFERENCE.txt  M6_QUICK_START_COORDINATOR.md  M7_PROJECT_COMPLETION_REPORT.md  OPTIMIZATION_SUMMARY.md  PARALLEL_WORKSTREAMS_COMPLETION.md  PHASE3B_COORDINATION_PLAN.md  PHASE3_AGENT_BRIEFING.md  PHASE3_EXECUTIVE_SUMMARY.md  PHASE3_GITHUB_ISSUES.md  PHASE3_STATUS_TRACKER.md  PHASE3_WEEK1_FINAL_REPORT.md  PROJECT_STATUS_20251124.md  QUICK_REFERENCE_COMPACT_MODELS.md  QUICK_START_NEXT_PHASE.md  (+27 more)
benchmarks/: BASELINE_REPORT.md  OPTIMIZATION_ROADMAP.md  PHASE1_RESULTS.md  analytical_forces_validation.json  baseline_performance.json  baseline_results.json  compact_models_benchmark_20251124_225551.json  compact_models_cpu_final_20251124.json  compact_models_finalized_20251124.json  export_summary_20251124_225726.json  m6_performance_results_cuda.json  m6_summary_cuda.txt  md_benchmark.py  optimization_results.json  original_model.onnx  phase3_week1_results.json  profile_detailed.py  profile_example.py  profile_teachers.py  profiling_results.txt  student_vs_orb.json  student_vs_orb_summary.txt  tiny_model.onnx  ultra_tiny_model.onnx  week2_compile_modes.json  week2_py312_results.json  week4_batched_druglike.json  week4_batched_druglike_v2.json
configs/: medium_scale_10k.yaml  medium_scale_10k_hybrid.yaml  medium_scale_10k_moldiff.yaml  train_student.yaml
docs/: AGENT_KICKOFF_MESSAGES.md  AGENT_PROTOCOLS.md  ANALYTICAL_FORCES_DERIVATION.md  ANALYTICAL_FORCES_DESIGN.md  API.md  ASE_INTERFACE_TEST_GUIDE.md  COMPACT_MODELS_TRAINING_PLAN.md  CUDA_KERNEL_OPTIMIZATION_REPORT.md  CUDA_SETUP_GUIDE.md  DATASET_VALIDATION.md  DROP_IN_COMPATIBILITY_GUIDE.md  FORCE_OPTIMIZATION_SUMMARY.md  FUTURE_DIRECTIONS.md  GITHUB_PROJECT_SETUP.md  HYBRID_GENERATIVE_IMPLEMENTATION_PLAN.md  HYDROGEN_ABSENCE_ISSUE.md  INFERENCE_OPTIMIZATION_GUIDE.md  INTEGRATION_CHECKLIST.md  ISSUE_02_COMPLETION_SUMMARY.md  ISSUE_08_COMPLETION_SUMMARY.md  ISSUE_6_COMPLETION_SUMMARY.md  ISSUE_9_COMPLETION_SUMMARY.md  M2_COORDINATION_PLAN.md  M2_DATA_PIPELINE_COMPLETE.md  M2_INFERENCE_PIPELINE.md  M2_STRATEGIC_RECOMMENDATIONS.md  M3.5_HYDROGEN_FIX_COORDINATION.md  M6_MD_INTEGRATION_COORDINATION.md  M6_TESTING_ENGINEER_QUICKSTART.md  MD_BENCHMARK_GUIDE.md  MD_REQUIREMENTS_UPDATE_SUMMARY.md  MD_VALIDATION_QUICKSTART.md  MERGED_DATASET_4883_REPORT.md  MILESTONES.md  MODEL_COMPLEXITY_COMPARISON.md  PARALLEL_EXECUTION_SUMMARY.md  PARALLEL_WORKSTREAMS_STATUS.md  PBC_BUG_FIX.md  PHASE1_OPTIMIZATION_SPEC.md  PHASE3B_ADVANCED_OPTIMIZATIONS.md  (+36 more)
examples/: README.md  ase_calculator_usage.py  batched_force_computation_example.py  data_loading_example.py  student_calculator_usage.py  student_model_demo.py  teacher_wrapper_usage.py  train_example.py
kernels/: __init__.py  fused_edge_features.py  fused_rbf_cutoff.py
models/: original_model.onnx  student_model.onnx
scripts/: add_rna_to_hybrid.py  analyze_compact_models_forces.py  analyze_forces_detailed.py  analyze_model_complexity.py  benchmark_all_models.py  benchmark_analytical_forces.py  benchmark_batched_forces_druglike.py  benchmark_compile_modes.py  benchmark_cuda_forward_only.py  benchmark_cuda_optimizations.py  benchmark_force_compile_modes.py  benchmark_force_optimizations.py  benchmark_forces_only.py  benchmark_inference.py  benchmark_optimizations.py  benchmark_phase3.py  benchmark_student_vs_orb.py  check_cuda.py  check_validation_progress.sh  convert_to_hdf5.py  debug_pbc_bug.py  demo_md_framework.py  export_to_onnx.py  export_to_torchscript.py  extract_trajectory_for_pymol.py  finalize_compact_models.py  finalize_cpu_optimized.py  fix_checkpoint.py  generate_10k_hybrid.py  generate_10k_moldiff.py  generate_full_dataset.sh  generate_labels.py  generate_medium_scale.py  generate_structures.py  initialize_project.sh  inspect_structures.py  m6_execution_startup.sh  merge_datasets.py  monitor_parallel_workstreams.sh  peptide_folding_simulation.py  (+30 more)
tests/: __init__.py  (+1 more)
(+179 files in other folders)
