[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlff-distiller"
version = "0.1.0"
description = "Fast, CUDA-optimized distilled force fields from Orb-models and FeNNol-PMC"
authors = [
    {name = "ML Force Field Distillation Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine learning", "force fields", "molecular dynamics", "knowledge distillation", "CUDA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "ase>=3.22.0",
    "pydantic>=2.0.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "pytest>=7.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
    "pre-commit>=3.3.0",
]
cuda = [
    "cupy-cuda12x>=12.0.0",
    "triton>=2.0.0",
]
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/atfrank/MLFF_Distiller"
Documentation = "https://github.com/atfrank/MLFF_Distiller/docs"
Repository = "https://github.com/atfrank/MLFF_Distiller"
Issues = "https://github.com/atfrank/MLFF_Distiller/issues"

[project.scripts]
mlff-train = "mlff_distiller.cli.main:train"
mlff-validate = "mlff_distiller.cli.main:validate"
mlff-benchmark = "mlff_distiller.cli.main:benchmark"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
    "accuracy: Accuracy validation tests comparing model predictions",
    "slow: Tests that take significant time to run (>5s)",
    "cuda: Tests requiring CUDA/GPU hardware",
    "cpu: Tests that should run on CPU only",
    "benchmark: Performance benchmark tests",
    "requires_teacher: Tests requiring trained teacher model",
    "requires_student: Tests requiring trained student model",
    "requires_orb: Tests requiring orb-models package",
    "requires_fennol: Tests requiring fennol package",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ase.*",
    "wandb.*",
    "tensorboard.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if TYPE_CHECKING",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true
